Worked on rendering. It now works(somewhat)

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 
-	<body onload="onWindowLoad();" id="body" bgcolor="#222222">
+	<body onload="onWindowLoad();" id="body" bgcolor="#006BA5">
 		<div class="navbar" id="navbar">
 		</div>
 
