--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
 		<title>Da VIMci</title>
 
 		<link rel="stylesheet" href="css/main.css">
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="utils.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</head>
@@ -37,7 +37,7 @@
 				<label class="section_goto" id="screenshots_goto"></label>
 				<label class="section_title" id="screenshots_section_title">Screenshots</label>
 				
-				This section contains images of the current state of the editor. For more images, go <a href="img/">here</a>.<br><br>
+				This section contains images of the current state of the editor. For more images, go <a href="img/" target="_blank">here</a>.<br><br>
 				<img style="width: 90%;" src="img/editor3.png" alt="Image of the editor" /><br>
 			</div>
 
